nifty updates, and some blog pages

--- a/layouts/base.j2
+++ b/layouts/base.j2
@@ -47,7 +47,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-{% block header -%}
+{% block logo -%}
           <img class="minime" src="/static/image/minime.png" />
           <a class="brand" href="/">{{ meta.title }}</a>
 {%- endblock %}
@@ -71,7 +71,7 @@
 
       <footer>
         <p>&copy; {{ meta.author.name }} {{ meta.time }}</p>
-        <p>Powered by <a href="http://ringce.com/hyde">hyde</a>.</p>
+        <p>Powered by <a href="http://colinta.com/projects/StrangeCase">StrangeCase</a>.</p>
       </footer>
 
     </div> <!-- /container -->
