--- a/site/blogs/index.j2
+++ b/site/blogs/index.j2
@@ -5,10 +5,9 @@ header: stuff i've written
 {% extends 'layouts/header.j2' %}
 
 {% block content %}
-  <h1>Blogs ({{ site.blogs | count }})</h1>
   <ol>
   {% for blog in site.blogs %}
-    <li><a href="{{ blog.url }}">{{ blog.title }}</a></li>
+    <li><span>{{ blog.date | date }}</span> &rsaquo; <a href="{{ blog.url }}">{{ blog.title }}</a></li>
   {% else %}
     <li>None</li>
   {% endfor %}
