--- a/site/projects/index.j2
+++ b/site/projects/index.j2
@@ -1,3 +1,7 @@
+---
+title: projects
+header: stuff i've coded
+---
 {% extends "layouts/header.j2" %}
 
 {% block main %}
@@ -23,7 +27,7 @@
       </p>
     </div>
 
-    <div class="span10">
+    <div class="span8">
       <div class="well">
         <p>
           {{ project.about }}
