--- a/layouts/post.j2
+++ b/layouts/post.j2
@@ -7,22 +7,22 @@
 
 <div class="row">
   <div class="span10">
-{% block content %}{% endblock %}
+    {%- block content %}{% endblock %}
     <hr>
-{% from 'includes/nextprev.j2' import nextprev %}
-{{  nextprev(my, site) }}
+    {%- from 'includes/nextprev.j2' import nextprev %}
+    {{  nextprev(my, site) }}
   </div>
 
   <div class="span4">
     <h4>Published</h4>
     <div class="date"><span>{{ my.date | date }}</span></div>
 
-  {% if not my.tags == empty %}
+    {%- if my.tags %}
     <h4>Tags</h4>
-    <ul class="tag_box">
-    {% set tags_list = my.tags %}
+    <ul>
+      <li>TODO</li>
     </ul>
-  {% endif %}
+    {%- endif %}
   </div>
 </div>
 {% endblock %}
