don't use google font for \'<code>\'

--- a/layouts/base.j2
+++ b/layouts/base.j2
@@ -16,7 +16,10 @@
     <link rel="apple-touch-icon" sizes="114x114" href="/static/image/apple-touch-icon-114x114.png">
 
 {% block googlefonts %}
+{#
     <link href='http://fonts.googleapis.com/css?family=Wire+One|Anonymous+Pro' rel='stylesheet' type='text/css'>
+#}
+    <link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
 {% endblock googlefonts %}
 
 {% block headcss %}
