--- a/layouts/base.j2
+++ b/layouts/base.j2
@@ -74,7 +74,7 @@
 
       <footer>
         <p>&copy; {{ meta.author.name }} {{ meta.time }}</p>
-        <p>Powered by <a href="http://colinta.com/projects/StrangeCase">StrangeCase</a>.</p>
+        <p>Powered by <a href="{{ site.projects.strange_case.url }}">StrangeCase</a>.</p>
       </footer>
 
     </div> <!-- /container -->
